created a seed script file

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "server.js",
   "scripts": {
     "test": "start",
-    "start": "node server.js"
+    "start": "node server.js",
+    "seed": "node db/seeds/seed.js"
   },
   "repository": {
     "type": "git",
